# iris-podman-k8s

./: Dockerfile  README.md  deployment.yaml  docker-compose.yaml  initialize_db.py  iris.db  predict.py  pyproject.toml  service.yaml  train_model.py
.github/workflows/: kind-deploy.yml  main.yml
ai-agent/: Dockerfile  app.py
api/: Dockerfile
database/: Dockerfile  initialize_db.py
frontend/: index.html
frontend/static/: scripts.js
inference/: Dockerfile  predict.py
iris/: model.pkl  predict.py  train_model.py
kubernetes/: ai-agent-deployment.yaml  ai-agent-service.yaml  api-deployment.yaml  api-service.yaml  database-deployment.yaml  frontend-deployment.yaml
templates/: index.html  result.html
tests/: test_predict.py
training/: Dockerfile  train_model.py
